# sslang

./: .gitconfig  .gitignore  .stan.toml  CONTRIBUTING.md  Codegen-Codegen.html  Codegen-Identifiers.html  Codegen-LibSSM.html  Codegen-TypeDef.html  Codegen-Typegen.html  Codegen.html  Common-Compiler.html  Common-Default.html  Common-Identifiers.html  Common-Pretty.html  Front-Ast.html  Front-DesugarLists.html  Front-DesugarPatTup.html  Front-DesugarStrings.html  Front-Identifiers.html  Front-ParseOperators.html  Front-Parser.html  Front-Pattern-Anomaly.html  Front-Pattern-Common.html  Front-Pattern-Desugar.html  Front-Pattern-Matrix.html  Front-Pattern-Vector.html  Front-Pattern.html  Front-Scanner.html  Front-Scope.html  Front-Token.html  Front.html  IR-ClassInstantiation.html  IR-Constraint-Canonical.html  IR-Constraint-Constrain-Annotation.html  IR-Constraint-Constrain-Expression.html  IR-Constraint-Constrain-Pattern.html  IR-Constraint-Constrain-Program.html  IR-Constraint-Constrain.html  IR-Constraint-Elaborate.html  IR-Constraint-Error.html  (+95 more)
.github/actions/setup-build/: action.yml
.github/workflows/: doc.yml  test.yml  tester.yml
app/: Main.hs
doc/: .gitignore  Doxyfile  Makefile  compile-build-run-cheatsheet.md  sslang-lrm.tex
doc/lang-design/: lowering-example.md
doc/type-system/: resources.md
examples/: clock.c  counter.c  counter2.c  fib.c  fib2.c  fib3.c  hello.c  hello2.c  onetwo.c  xform.sed
examples/blink-platformio-zephyr/: platformio.ini
examples/blink-platformio-zephyr/src/: main.c
examples/blink-platformio-zephyr/zephyr/: prj.conf  stm32f4_disco.overlay
examples/flipfloploopspec-platformio-zephyr/src/: flipfloploopspec.c  main.c
include/: formatters.h  ssm-act.h  ssm-core.h  ssm-debug.h  ssm-internal.h  ssm-platform.h  ssm-program.h  ssm-queue.h  ssm-runtime.h  ssm-sv.h  ssm-types.h  ssm.h  test-ssm-queue.h
lib/ssm/: .gitignore  .gitrepo  LICENSE  Makefile  README.md  library.json  library_platform.py  runexamples  runtests.sh
lib/ssm/doc/: Doxyfile  DoxygenLayout.xml  (+13 more)
regression-tests/: Runtests.hs  numbers_results.txt  results_list1.txt  results_list1_typed.txt  runtests.sh  sort-heap-IR.failing  testEmily.sh  testoutput.c
regression-tests/tests/: 1-a.ssl.failing  1-inlining-ex-1.ssl  1-inlining-ex-2.ssl  1-inlining-ex-3.ssl  1-inlining-ex-4.ssl  1-inlining-ex-5.ssl  1opt-par1.ssl.failing  1opt-par2.ssl  1opt-par3.ssl  1opt-par3.ssl.fail  1opt-par4.ssl.fail  1opt-par4.ssl.failing  1opt-par5.ssl.failing  1opt-par6.ssl.fail  1opt-par6.ssl.failing  1opt-par7.failing  1opt-par7.out  1recursion-test.ssl  31bitInts-main.c  31bitInts.ssl  31bitInts.ssl.failing  31bitInts2.ssl  31bitInts2.ssl.failing  31bitInts3.ssl.failing  DConTrivArgs.ssl  a-inlining-ex-1.ssl  a-inlining-ex-2.ssl  a-inlining-ex-3.ssl  a-inlining-ex-4.ssl  a-inlining-ex-5.ssl  add1.ssl  adt-int-fields.out  adt-int-fields.ssl  adt-partially-applied.ssl  adt-recursive-main.c  adt-recursive.ssl  apply1.ssl  apply2.ssl  blink-main.c  blink.ssl  (+201 more)
scripts/: build  fmt  hello  lint
src/: Ast.hs  Ast2IR.hs  C.hs  CGen.hs  Codegen.Codegen.html  Codegen.Identifiers.html  Codegen.LibSSM.html  Codegen.TypeDef.html  Codegen.Typegen.html  Codegen.hs  Codegen.html  Common.Compiler.html  Common.Default.html  Common.Identifiers.html  Common.Pretty.html  Duration.hs  Front.Ast.html  Front.DesugarLists.html  Front.DesugarPatTup.html  Front.DesugarStrings.html  Front.Identifiers.html  Front.ParseOperators.html  Front.Parser.html  Front.Pattern.Anomaly.html  Front.Pattern.Common.html  Front.Pattern.Desugar.html  Front.Pattern.Matrix.html  Front.Pattern.Vector.html  Front.Pattern.html  Front.Scanner.html  Front.Scope.html  Front.Token.html  Front.hs  Front.html  IR.ClassInstantiation.html  IR.Constraint.Canonical.html  IR.Constraint.Constrain.Annotation.html  IR.Constraint.Constrain.Expression.html  IR.Constraint.Constrain.Pattern.html  IR.Constraint.Constrain.Program.html  (+65 more)
src/Codegen/: Codegen.hs  Errors.hs  Expr.hs  Identifiers.hs  LibSSM.hs  TypeDef.hs  Typegen.hs  Types.hs
src/Common/: Compiler.hs  Default.hs  Errors.hs  IR.hs  Identifiers.hs  Pretty.hs  Types.hs
src/Constraint/: Datatype.hs  Decoder.hs  Elab.hs  Generalization.hs  Generation.hs  InfiniteArray.hs  OccursCheck.hs  ShadowMap.hs  Solver.hs  SolverM.hs  Structure.hs  Unifier.hs  UnionFind.hs  Utils.hs
src/Core/: Core.hs
src/Elaboration/: AST.hs  Datatype.hs  Scratch.hs
src/Front/: .gitignore  Ast.hs  Check.hs  DesugarLists.hs  DesugarPatTup.hs  DesugarStrings.hs  Identifiers.hs  Lowering.hs  Match.hs  ParseOperators.hs  Parser.y  Pattern.hs  RewriteImportId.hs  Scanner.x  Scope.hs  Token.hs
src/IR/: Ast.hs  ClassInstantiation.hs  DConToFunc.hs  DesugarPattern.hs  DropInference.hs  ExternToCall.hs  HM.hs  IR.hs  InsertRefCounting.hs  LambdaLift.hs  LowerAst.hs  Lowering.hs  MangleNames.hs  MatchChecker.hs  Mono.hs  Monomorphize.hs  OptimizeDupDrop.hs  OptimizePar.hs  Pattern.hs  Poly.hs  Pretty.hs  SegmentLets.hs  SequentializeLet.hs  Simplify.hs  SubstMagic.hs  Type.hs  TypeChecker.hs  TypeInference.hs  Types.hs  UnrollLets.hs
src/Types/: Ast.hs  Classes.hs  Common.hs  Flat.hs  HM.hs  Mono.hs  Poly.hs  TypeSystem.hs
test/: examples.out  test_main.c
test/regression/: Spec.hs
tools/: Makefile
tools/sslc-pio/: Makefile  sslc-pio
unit-tests/: IRTest.hs  ParserTest.hs  ScannerTest.hs
(+184 files in other folders)
